# oure

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  OURE_agentic_tasks_v2.md  OURE_code_review.md  OURE_need.md  README.md  TESTING.md  docker-compose.yaml  example.py  install.sh  mock_history.py  oure.rb  p_stress.json  prometheus.yml  pyproject.toml  requirements.txt  runtime_testing_report.md  s_stress.json  setup.py  start_web.sh  test_secondaries.json
.github/workflows/: ci.yml
Files/: OURE_Agentic_Build_Spec.md  OURE_Architecture.docx  OURE_Architecture.md  OUREbreif.md  OUREspecs.md  assessor.py  commands.py  covariance.py  fetchers.py  models.py  propagator.py
oure/api/: celery_app.py  main.py  tasks.py
oure/cli/: cmd_analyze.py  cmd_avoid.py  cmd_cache.py  cmd_cdm.py  cmd_fetch.py  cmd_fleet.py  cmd_history.py  cmd_monitor.py  cmd_plot.py  cmd_report.py  cmd_sensor.py  cmd_shatter.py  main.py  utils.py
oure/conjunction/: assessor.py  spatial_index.py  tca_finder.py
oure/core/: config.py  constants.py  exceptions.py  logging_config.py  metrics.py  models.py
oure/dashboard/: app.py
oure/data/: base.py  cache.py  cdm_parser.py  cpf_parser.py  noaa.py  schemas.py  spacetrack.py
oure/physics/: atmosphere.py  base.py  breakup.py  drag_corrector.py  factory.py  frames.py  j2_corrector.py  kepler.py  maneuver.py  numerical.py  sgp4_propagator.py  srp_corrector.py
oure/risk/: alert.py  bplane.py  calculator.py  foster.py  optimizer.py  plotter.py
oure/uncertainty/: covariance_propagator.py  monte_carlo.py  noise.py  sensor.py  stm.py
tests/: conftest.py
tests/integration/: test_architecture.py
tests/unit/: test_advanced_physics.py  test_alert.py  test_assessor.py  test_cache.py  test_calculator.py  test_cdm_logic.py  test_cli.py  test_cli_coverage.py  test_cli_plot.py  test_config.py  test_covariance.py  test_cpf_parser.py  test_drag.py  test_enterprise_coverage.py  test_factory.py  test_j2.py  test_kepler.py  test_models.py  test_monte_carlo.py  test_noaa.py  test_optimizer_logic.py  test_physics_coverage.py  test_plotter_coverage.py  test_report.py  test_sensor_math.py  test_sgp4.py  test_shatter_math.py  test_spacetrack.py  test_spatial_index.py  test_srp.py  test_stm.py  test_tca_finder.py
